config rewrite app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,10 +28,9 @@
   ],
   "exclude": [
     "node_modules",
-    "dist",
+    "build",
     ".next",
     "out",
-    ".babelrc",
     "bundles",
     "coverage",
     "test/*"
