--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -58,7 +57,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.0",
     "prettier": "^2.2.1",
-    "typescript": "^3.9.3"
+    "react-app-rewired": "^2.1.8",
+    "typescript": "^3.9.7"
   },
   "browserslist": {
     "production": [
